@@ -641,6 +641,7 @@ typedef enum user_options_defaults
   MACHINE_READABLE         = false,
   MARKOV_CLASSIC           = false,
   MARKOV_DISABLE           = false,
+  MARKOV_INVERSE           = false,
   MARKOV_THRESHOLD         = 0,
   NONCE_ERROR_CORRECTIONS  = 8,
   BACKEND_IGNORE_CUDA      = false,
@@ -751,55 +752,56 @@ typedef enum user_options_map
   IDX_MARKOV_CLASSIC            = 0xff28,
   IDX_MARKOV_DISABLE            = 0xff29,
   IDX_MARKOV_HCSTAT2            = 0xff2a,
+  IDX_MARKOV_INVERSE            = 0xff2b,
   IDX_MARKOV_THRESHOLD          = 't',
-  IDX_NONCE_ERROR_CORRECTIONS   = 0xff2b,
+  IDX_NONCE_ERROR_CORRECTIONS   = 0xff2c,
   IDX_OPENCL_DEVICE_TYPES       = 'D',
   IDX_OPTIMIZED_KERNEL_ENABLE   = 'O',
-  IDX_OUTFILE_AUTOHEX_DISABLE   = 0xff2c,
-  IDX_OUTFILE_CHECK_DIR         = 0xff2d,
-  IDX_OUTFILE_CHECK_TIMER       = 0xff2e,
-  IDX_OUTFILE_FORMAT            = 0xff2f,
+  IDX_OUTFILE_AUTOHEX_DISABLE   = 0xff2d,
+  IDX_OUTFILE_CHECK_DIR         = 0xff2e,
+  IDX_OUTFILE_CHECK_TIMER       = 0xff2f,
+  IDX_OUTFILE_FORMAT            = 0xff30,
   IDX_OUTFILE                   = 'o',
-  IDX_POTFILE_DISABLE           = 0xff30,
-  IDX_POTFILE_PATH              = 0xff31,
-  IDX_PROGRESS_ONLY             = 0xff32,
-  IDX_QUIET                     = 0xff33,
-  IDX_REMOVE                    = 0xff34,
-  IDX_REMOVE_TIMER              = 0xff35,
-  IDX_RESTORE                   = 0xff36,
-  IDX_RESTORE_DISABLE           = 0xff37,
-  IDX_RESTORE_FILE_PATH         = 0xff38,
+  IDX_POTFILE_DISABLE           = 0xff31,
+  IDX_POTFILE_PATH              = 0xff32,
+  IDX_PROGRESS_ONLY             = 0xff33,
+  IDX_QUIET                     = 0xff34,
+  IDX_REMOVE                    = 0xff35,
+  IDX_REMOVE_TIMER              = 0xff36,
+  IDX_RESTORE                   = 0xff37,
+  IDX_RESTORE_DISABLE           = 0xff38,
+  IDX_RESTORE_FILE_PATH         = 0xff39,
   IDX_RP_FILE                   = 'r',
-  IDX_RP_GEN_FUNC_MAX           = 0xff39,
-  IDX_RP_GEN_FUNC_MIN           = 0xff3a,
+  IDX_RP_GEN_FUNC_MAX           = 0xff3a,
+  IDX_RP_GEN_FUNC_MIN           = 0xff3b,
   IDX_RP_GEN                    = 'g',
-  IDX_RP_GEN_SEED               = 0xff3b,
+  IDX_RP_GEN_SEED               = 0xff3c,
   IDX_RULE_BUF_L                = 'j',
   IDX_RULE_BUF_R                = 'k',
-  IDX_RUNTIME                   = 0xff3c,
-  IDX_SCRYPT_TMTO               = 0xff3d,
+  IDX_RUNTIME                   = 0xff3d,
+  IDX_SCRYPT_TMTO               = 0xff3e,
   IDX_SEGMENT_SIZE              = 'c',
-  IDX_SELF_TEST_DISABLE         = 0xff3e,
+  IDX_SELF_TEST_DISABLE         = 0xff3f,
   IDX_SEPARATOR                 = 'p',
-  IDX_SESSION                   = 0xff3f,
-  IDX_SHOW                      = 0xff40,
+  IDX_SESSION                   = 0xff40,
+  IDX_SHOW                      = 0xff41,
   IDX_SKIP                      = 's',
   IDX_SLOW_CANDIDATES           = 'S',
-  IDX_SPEED_ONLY                = 0xff41,
-  IDX_SPIN_DAMP                 = 0xff42,
-  IDX_STATUS                    = 0xff43,
-  IDX_STATUS_JSON               = 0xff44,
-  IDX_STATUS_TIMER              = 0xff45,
-  IDX_STDOUT_FLAG               = 0xff46,
-  IDX_STDIN_TIMEOUT_ABORT       = 0xff47,
-  IDX_TRUECRYPT_KEYFILES        = 0xff48,
-  IDX_USERNAME                  = 0xff49,
-  IDX_VERACRYPT_KEYFILES        = 0xff4a,
-  IDX_VERACRYPT_PIM_START       = 0xff4b,
-  IDX_VERACRYPT_PIM_STOP        = 0xff4c,
+  IDX_SPEED_ONLY                = 0xff42,
+  IDX_SPIN_DAMP                 = 0xff43,
+  IDX_STATUS                    = 0xff44,
+  IDX_STATUS_JSON               = 0xff45,
+  IDX_STATUS_TIMER              = 0xff46,
+  IDX_STDOUT_FLAG               = 0xff47,
+  IDX_STDIN_TIMEOUT_ABORT       = 0xff48,
+  IDX_TRUECRYPT_KEYFILES        = 0xff49,
+  IDX_USERNAME                  = 0xff4a,
+  IDX_VERACRYPT_KEYFILES        = 0xff4b,
+  IDX_VERACRYPT_PIM_START       = 0xff4c,
+  IDX_VERACRYPT_PIM_STOP        = 0xff4d,
   IDX_VERSION_LOWER             = 'v',
   IDX_VERSION                   = 'V',
-  IDX_WORDLIST_AUTOHEX_DISABLE  = 0xff4d,
+  IDX_WORDLIST_AUTOHEX_DISABLE  = 0xff4e,
   IDX_WORKLOAD_PROFILE          = 'w',
 
 } user_options_map_t;
@@ -2006,6 +2008,7 @@ typedef struct user_options
   bool         machine_readable;
   bool         markov_classic;
   bool         markov_disable;
+  bool         markov_inverse;
   bool         backend_ignore_cuda;
   bool         backend_ignore_opencl;
   bool         backend_info;
